# ST-2

./: .gitignore.txt  CMakeLists.txt
include/: circle  circle.h  task.h  tasks.h  tasks.hpp
src/: CMakeLists.txt  circle.cpp  circle.h  main.cpp  task.cpp  tasks.cpp  tasks.h
test/: AllTests.cpp  CMakeLists.txt  tests.cpp
